Complete notification system implementation - Add complete notification backend (entity, repository, service, controller) - Implement NotificationSchedulerService for automated reminders - Add full-featured notifications.html frontend interface - Create notification-service.js for real-time updates - Add notification badges and polling across all pages - Implement browser notification support - Add automated study reminders, session alerts, daily tips - Update all frontend pages with notification integration - Fix repository methods and entity relationships

--- a/static-site/create-session.html
+++ b/static-site/create-session.html
@@ -33,6 +33,13 @@
                         <a class="nav-link active" href="sessions.html">Sessions</a>
                     </li>
                     <li class="nav-item">
+                        <a class="nav-link" href="notifications.html">
+                            <i class="fas fa-bell me-1"></i>
+                            <span id="navNotificationBadge" style="display: none;" class="badge bg-danger rounded-pill ms-1">0</span>
+                            Notifications
+                        </a>
+                    </li>
+                    <li class="nav-item">
                         <a class="nav-link" href="ai-dashboard.html">
                             <i class="fas fa-robot me-1"></i>AI Assistant
                         </a>
