🎨 Fix: Change statistics numbers to white color - Updated stat-number color from purple (#667eea) to white - Better contrast against gradient background in hero section - Statistics (1,000 students, 50,000 sessions, 95% rate) now clearly visible

--- a/static-site/index.html
+++ b/static-site/index.html
@@ -123,7 +123,7 @@
         .stat-number {
             font-size: 3rem;
             font-weight: 700;
-            color: #667eea;
+            color: white; /* Changed from #667eea to white */
             display: block;
         }
 
